recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:2: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  carre(); right(); carre(); right(); carre(); right(); carre(); right();
           ^FourSquare:2: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  carre(); right(); carre(); right(); carre(); right(); carre(); right();
                             ^FourSquare:2: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  carre(); right(); carre(); right(); carre(); right(); carre(); right();
                                               ^FourSquare:2: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  carre(); right(); carre(); right(); carre(); right(); carre(); right();
                                                                 ^FourSquare:6: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  forward(100); right(); forward(100); right(); forward(100); right(); forward(100); right();
                ^FourSquare:6: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  forward(100); right(); forward(100); right(); forward(100); right(); forward(100); right();
                                       ^FourSquare:6: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  forward(100); right(); forward(100); right(); forward(100); right(); forward(100); right();
                                                              ^FourSquare:6: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  forward(100); right(); forward(100); right(); forward(100); right(); forward(100); right();
                                                                                     ^