recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  carre(); right(); carre(); right(); carre(); right(); carre(); right();
}

def carre(){
  forward(100); right(); forward(100); right(); forward(100); right(); forward(100); right();
}